@@ -87,9 +87,10 @@ project.</p>
   </tr>
 </table>
 
-<h3>Parameters specified as nested elements</h3>
-<h4>property</h4>
-<p>See the description of the <a href="property.html">property task</a>.</p>
+<h3>Parameters specified as nested elements</h3> <h4>property</h4>
+<p>See the description of the <a href="property.html">property
+task</a>.  Note that the <code>refid</code> attribute points to a
+reference in the calling project, not in the new one.</p>
 
 <h4><a name="reference">reference</a></h4>
 <p>Used to chose references that shall be copied into the new project,
